# shuup-guide

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.rst  make.bat  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
source/: addons.rst  apps.rst  campaign-management.rst  campaigns.rst  campaigns.txt  carts.rst  conf.py  customers-and-users.rst  customers.rst  domains.rst  front.rst  index.rst  multivendor.rst  notifications.rst  orders.rst  payment-and-shipping.rst  payment-settings.rst  product-reviews.rst  products.rst  reports-and-analytics.txt  shipping.rst  stock-management.rst  tax-settings.rst  using-the-shoop-admin.rst  using-the-shuup-admin.rst  using-themes.rst
source/_static/: shuup.css
source/_static/css/: shuup.css
source/_templates/: layout.html
source/_themes/: sphinx_shoop_theme
source/front/rst/: xtheme.rst
wheels/: sphinx_shoop_theme-0.6.0-py2.py3-none-any.whl  sphinx_shuup_theme-0.6.0-py2.py3-none-any.whl
