[metadata]
name = shuup-guide
version = 0.6.0

[bdist_wheel]
universal = 1

[prequ]
annotate = yes
wheel_dir = wheels
wheel_sources =
    shuup = git+ssh://git@github.com/shuup/{pkg}@v{ver}

requirements =
    recommonmark==0.4.0
    sphinx==3.1.2
    sphinx-shoop-theme==0.6.0 (wheel from shuup)

requirements-dev =
    prequ
    sphinx-reload
